--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
 
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Pereproverka UI</title>
+  <style>
+    body {
+      font-family: system-ui, Arial, sans-serif;
+      background: #f5f7fb;
+      margin: 0;
+      padding: 20px;
+    }
+    .card {
+      background: white;
+      border-radius: 16px;
+      padding: 20px;
+      box-shadow: 0 10px 30px rgba(0,0,0,.1);
+      max-width: 400px;
+      margin: 40px auto;
+      text-align: center;
+    }
+    h1 { margin: 0 0 10px; }
+    p { color: #555; }
+  </style>
+</head>
+<body>
+  <div class="card">
+    <h1>UI работает</h1>
+    <p>GitHub Pages настроен правильно.</p>
+    <p>Если ты видишь это с телефона — всё ок.</p>
+  </div>
+</body>
+</html>
