--- a/index.html
+++ b/index.html
@@ -1,35 +1,32 @@
+<div class="card">
+  <h1>UI работает</h1>
+  <p>Проверка связи с API</p>
 
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Pereproverka UI</title>
-  <style>
-    body {
-      font-family: system-ui, Arial, sans-serif;
-      background: #f5f7fb;
-      margin: 0;
-      padding: 20px;
-    }
-    .card {
-      background: white;
-      border-radius: 16px;
-      padding: 20px;
-      box-shadow: 0 10px 30px rgba(0,0,0,.1);
-      max-width: 400px;
-      margin: 40px auto;
-      text-align: center;
-    }
-    h1 { margin: 0 0 10px; }
-    p { color: #555; }
-  </style>
-</head>
-<body>
-  <div class="card">
-    <h1>UI работает</h1>
-    <p>GitHub Pages настроен правильно.</p>
-    <p>Если ты видишь это с телефона — всё ок.</p>
-  </div>
-</body>
-</html>
+  <button id="btn" style="padding:12px 18px;font-size:16px;border-radius:12px;">
+    Отправить запрос
+  </button>
+
+  <pre id="out" style="margin-top:12px;background:#f1f5f9;padding:10px;border-radius:10px;font-size:12px;"></pre>
+</div>
+
+<script>
+const API_URL = "https://script.google.com/macros/s/AKfycbzM34gA9ak--23-J1lgAEaczriCznPVBw68SPY0gD98UqsPYoeLBQxP5MTz4eCQiIa8/exec";
+
+document.getElementById("btn").onclick = async () => {
+  const out = document.getElementById("out");
+  out.textContent = "Отправляю…";
+
+  try {
+    const res = await fetch(API_URL, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ from: "github-pages", test: 1 })
+    });
+
+    const json = await res.json();
+    out.textContent = JSON.stringify(json, null, 2);
+  } catch (e) {
+    out.textContent = "Ошибка: " + e.message;
+  }
+};
+</script>
