--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@ document.getElementById("btn").onclick = async () => {
   const out = document.getElementById("out");
   out.textContent = "Отправляю…";
 
-  const res = await fetch(API_URL, {
-  method: "POST",
-  redirect: "follow",
-  headers: { "Content-Type": "application/json" },
-  body: JSON.stringify({ from: "github-pages", test: 1 })
-});
-
+  try {
+    const res = await fetch(API_URL, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ from: "github-pages", test: 1 })
+    });
 
     const json = await res.json();
     out.textContent = JSON.stringify(json, null, 2);
@@ -31,3 +30,4 @@ document.getElementById("btn").onclick = async () => {
   }
 };
 </script>
+
