--- a/index.html
+++ b/index.html
@@ -1,33 +1,123 @@
-<div class="card">
-  <h1>UI работает</h1>
-  <p>Проверка связи с API</p>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Pereproverka UI</title>
 
-  <button id="btn" style="padding:12px 18px;font-size:16px;border-radius:12px;">
-    Отправить запрос
-  </button>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      background: #f5f7fb;
+    }
 
-  <pre id="out" style="margin-top:12px;background:#f1f5f9;padding:10px;border-radius:10px;font-size:12px;"></pre>
-</div>
+    .wrap {
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
 
-<script>
-const API_URL = "https://script.google.com/macros/s/AKfycbzM34gA9ak--23-J1lgAEaczriCznPVBw68SPY0gD98UqsPYoeLBQxP5MTz4eCQiIa8/exec";
+    .card {
+      background: #fff;
+      border-radius: 18px;
+      padding: 24px;
+      width: 100%;
+      max-width: 420px;
+      box-shadow: 0 10px 30px rgba(0,0,0,.1);
+      text-align: center;
+    }
 
-document.getElementById("btn").onclick = async () => {
-  const out = document.getElementById("out");
-  out.textContent = "Отправляю…";
+    h1 {
+      margin: 0 0 10px;
+      font-size: 28px;
+    }
 
-  try {
-    const res = await fetch(API_URL, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ from: "github-pages", test: 1 })
+    p {
+      margin: 0 0 16px;
+      color: #555;
+    }
+
+    button {
+      width: 100%;
+      padding: 14px;
+      font-size: 16px;
+      font-weight: 600;
+      border-radius: 14px;
+      border: none;
+      background: #2563eb;
+      color: #fff;
+      cursor: pointer;
+    }
+
+    button:active {
+      transform: scale(0.98);
+    }
+
+    pre {
+      margin-top: 16px;
+      padding: 12px;
+      background: #f1f5f9;
+      border-radius: 12px;
+      font-size: 13px;
+      text-align: left;
+      white-space: pre-wrap;
+      word-break: break-word;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="wrap">
+    <div class="card">
+      <h1>UI работает</h1>
+      <p>Проверка связи с API</p>
+
+      <button id="btn">Отправить запрос</button>
+
+      <pre id="out">Ожидание…</pre>
+    </div>
+  </div>
+
+  <script>
+    // ⚠️ ВАЖНО: URL именно тот, который ты деплоил
+    const API_URL =
+      "https://script.google.com/macros/s/AKfycbzM34gA9ak--23-J1lgAEaczriCznPVBw68SPY0gD98UqsPYoeLBQxP5MTz4eCQiIa8/exec";
+
+    const btn = document.getElementById("btn");
+    const out = document.getElementById("out");
+
+    btn.addEventListener("click", async () => {
+      out.textContent = "Отправляю запрос…";
+
+      try {
+        const res = await fetch(API_URL, {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify({
+            from: "github-pages",
+            test: true,
+            ts: Date.now()
+          })
+        });
+
+        if (!res.ok) {
+          throw new Error("HTTP " + res.status);
+        }
+
+        const json = await res.json();
+        out.textContent = JSON.stringify(json, null, 2);
+
+      } catch (err) {
+        out.textContent =
+          "Ошибка запроса:\n" +
+          (err && err.message ? err.message : String(err));
+      }
     });
-
-    const json = await res.json();
-    out.textContent = JSON.stringify(json, null, 2);
-  } catch (e) {
-    out.textContent = "Ошибка: " + e.message;
-  }
-};
-</script>
-
+  </script>
+</body>
+</html>
