--- a/index.html
+++ b/index.html
@@ -1,65 +1,46 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Pereproverka UI</title>
 
   <style>
     body {
       margin: 0;
-      padding: 0;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      font-family: system-ui, Arial, sans-serif;
       background: #f5f7fb;
     }
-
     .wrap {
       min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
     }
-
     .card {
-      background: #fff;
-      border-radius: 18px;
+      background: white;
+      border-radius: 16px;
       padding: 24px;
       width: 100%;
       max-width: 420px;
       box-shadow: 0 10px 30px rgba(0,0,0,.1);
       text-align: center;
     }
-
-    h1 {
-      margin: 0 0 10px;
-      font-size: 28px;
-    }
-
-    p {
-      margin: 0 0 16px;
-      color: #555;
-    }
-
     button {
       width: 100%;
       padding: 14px;
       font-size: 16px;
-      font-weight: 600;
-      border-radius: 14px;
+      border-radius: 12px;
       border: none;
       background: #2563eb;
-      color: #fff;
+      color: white;
+      font-weight: 600;
       cursor: pointer;
     }
-
-    button:active {
-      transform: scale(0.98);
-    }
-
     pre {
       margin-top: 16px;
-      padding: 12px;
       background: #f1f5f9;
+      padding: 12px;
       border-radius: 12px;
       font-size: 13px;
       text-align: left;
@@ -68,56 +49,43 @@
     }
   </style>
 </head>
-
 <body>
-  <div class="wrap">
-    <div class="card">
-      <h1>UI работает</h1>
-      <p>Проверка связи с API</p>
 
-      <button id="btn">Отправить запрос</button>
+<div class="wrap">
+  <div class="card">
+    <h1>UI работает</h1>
+    <p>Проверка связи с API (GET)</p>
 
-      <pre id="out">Ожидание…</pre>
-    </div>
+    <button id="btn">Отправить запрос</button>
+
+    <pre id="out">Ожидание…</pre>
   </div>
+</div>
 
-  <script>
-    // ⚠️ ВАЖНО: URL именно тот, который ты деплоил
-    const API_URL =
-      "https://script.google.com/macros/s/AKfycbzM34gA9ak--23-J1lgAEaczriCznPVBw68SPY0gD98UqsPYoeLBQxP5MTz4eCQiIa8/exec";
+<script>
+const API_URL = "https://script.google.com/macros/s/AKfycbzM34gA9ak--23-J1lgAEaczriCznPVBw68SPY0gD98UqsPYoeLBQxP5MTz4eCQiIa8/exec";
 
-    const btn = document.getElementById("btn");
-    const out = document.getElementById("out");
+const btn = document.getElementById("btn");
+const out = document.getElementById("out");
 
-    btn.addEventListener("click", async () => {
-      out.textContent = "Отправляю запрос…";
+btn.onclick = async () => {
+  out.textContent = "Отправляю…";
 
-      try {
-        const res = await fetch(API_URL, {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json"
-          },
-          body: JSON.stringify({
-            from: "github-pages",
-            test: true,
-            ts: Date.now()
-          })
-        });
+  const url =
+    API_URL +
+    "?from=github-pages" +
+    "&test=1" +
+    "&ts=" + Date.now();
 
-        if (!res.ok) {
-          throw new Error("HTTP " + res.status);
-        }
+  try {
+    const res = await fetch(url);
+    const json = await res.json();
+    out.textContent = JSON.stringify(json, null, 2);
+  } catch (e) {
+    out.textContent = "Ошибка: " + e.message;
+  }
+};
+</script>
 
-        const json = await res.json();
-        out.textContent = JSON.stringify(json, null, 2);
-
-      } catch (err) {
-        out.textContent =
-          "Ошибка запроса:\n" +
-          (err && err.message ? err.message : String(err));
-      }
-    });
-  </script>
 </body>
 </html>
