--- a/index.html
+++ b/index.html
@@ -63,36 +63,41 @@
 </div>
 
 <script>
-const API_URL = "https://script.google.com/macros/s/AKfycbzM34gA9ak--23-J1lgAEaczriCznPVBw68SPY0gD98UqsPYoeLBQxP5MTz4eCQiIa8/exec";
+const API = "https://script.google.com/macros/s/AKfycbzM34gA9ak--23-J1lgAEaczriCznPVBw68SPY0gD98UqsPYoeLBQxP5MTz4eCQiIa8/exec";
 
-const btn = document.getElementById("btn");
+let userId = localStorage.getItem("userId");
+if (!userId) {
+  userId = crypto.randomUUID();
+  localStorage.setItem("userId", userId);
+}
+
 const out = document.getElementById("out");
 
-btn.onclick = async () => {
-  out.textContent = "Отправляю…";
+async function initUser() {
+  const res = await fetch(`${API}?action=getUser&userId=${userId}`);
+  const data = await res.json();
 
-  // 🔴 ТЕСТОВЫЕ ДАННЫЕ
-  const sheet = "Перепроверка";
-  const row = 4;          // ← любую строку
-  const col = "G";        // ← колонка
-  const value = "123";    // ← что записываем
-
-  const url =
-    API_URL +
-    "?sheet=" + encodeURIComponent(sheet) +
-    "&row=" + row +
-    "&col=" + col +
-    "&value=" + encodeURIComponent(value);
-
-  try {
-    const res = await fetch(url);
-    const json = await res.json();
-    out.textContent = JSON.stringify(json, null, 2);
-  } catch (e) {
-    out.textContent = "Ошибка: " + e.message;
+  if (data.user) {
+    out.textContent = `Привет, ${data.user.name} (${data.user.role})`;
+  } else {
+    askName();
   }
-};
+}
+
+function askName() {
+  const name = prompt("Введите ваше имя");
+  if (!name) return;
+
+  fetch(`${API}?action=createUser&userId=${userId}&name=${encodeURIComponent(name)}`)
+    .then(r => r.json())
+    .then(d => {
+      out.textContent = `Профиль создан: ${d.user.name}`;
+    });
+}
+
+initUser();
 </script>
+
 
 
 </body>
